# rough_heston_qipc_project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py
notebooks/: demo.ipynb
rough_heston_qipc/: __init__.py  _core.py
rough_heston_qipc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_rough_heston_qipc.py
