[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rough-heston-qipc"
version = "0.1.0"
description = "Rough Heston option pricing with a quadratic-implicit fractional Adams predictor-corrector solver."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "soya-git", email = "2974133775@qq.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]
keywords = ["rough heston", "option pricing", "fractional adams", "quantitative finance", "numerical methods"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
demo = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "matplotlib>=3.8", "build>=1.2"]

[project.urls]
Homepage = "https://github.com/soya-git/rough-heston-qipc"
Repository = "https://github.com/soya-git/rough-heston-qipc"
Issues = "https://github.com/soya-git/rough-heston-qipc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rough_heston_qipc*"]
